# khanspaceindustries

./: CNAME  index.html  style.css
Engine Control Unit/: .gitignore  Engine Control Unit  Engine Control Unit.kicad_pcb  Engine Control Unit.kicad_prl  Engine Control Unit.kicad_pro  Engine Control Unit.kicad_sch
Engine Control Unit/gerbers/: Engine Control Unit-B_Mask.gbs  Engine Control Unit-B_Paste.gbp  Engine Control Unit-B_Silkscreen.gbo  Engine Control Unit-Back.gbl  Engine Control Unit-Edge_Cuts.gm1  Engine Control Unit-F_Mask.gts  Engine Control Unit-F_Paste.gtp  Engine Control Unit-F_Silkscreen.gto  Engine Control Unit-Front.gtl  Engine Control Unit-NPTH.drl  Engine Control Unit-PTH.drl  Valve-B_Mask.gbs  Valve-B_Paste.gbp  Valve-B_Silkscreen.gbo  Valve-Back.gbl  Valve-Edge_Cuts.gm1  Valve-F_Mask.gts  Valve-F_Paste.gtp  Valve-F_Silkscreen.gto  Valve-Front.gtl  Valve-In1_Cu.g2  Valve-In2_Cu.g3  Valve-NPTH-drl_map.gbr  Valve-NPTH.drl  Valve-PTH-drl_map.gbr  Valve-PTH.drl
Engine Control Unit/gerbers_v2/: Valve-B_Mask.gbs  Valve-B_Paste.gbp  Valve-B_Silkscreen.gbo  Valve-Back.gbl  Valve-Edge_Cuts.gm1  Valve-F_Mask.gts  Valve-F_Paste.gtp  Valve-F_Silkscreen.gto  Valve-Front.gtl  Valve-In1_Cu.g2  Valve-In2_Cu.g3  Valve-NPTH.drl  Valve-PTH.drl
Engine Control Unit/gerbers_v3/: Engine Control Unit-B_Mask.gbs  Engine Control Unit-B_Paste.gbp  (+11 more)
flow/: .gitignore  Cargo.toml  plot.py  pyproject.toml
flow/flow/: flow.ino
flow/src/: main.rs
groundcontrol/: .gitignore  Cargo.toml  groundcontrol.ino
lab_assist/: .gitignore  Cargo.toml  template.md
(+3 files in other folders)
